--- a/src/app/dashboard/od-items/od-items.component.css
+++ b/src/app/dashboard/od-items/od-items.component.css
@@ -62,9 +62,17 @@
 }
 
 .due-items .day-count h6 {
-    font-size: 21px;
+    font-size: 18px;
+    line-height: 20px;
+    margin: 0;
+    font-weight: 600;
+}
+
+.due-items .day-count span {
+    font-size: 15px;
     line-height: 18px;
     margin: 0;
+    font-weight: 600;
 }
 
 .due-end {
@@ -95,11 +103,13 @@
 .due-items .due-info h5 {
     font-size: 18px;
     line-height: 22px;
+    margin-bottom: 5px;
 }
 
 .due-items .due-info p {
     font-weight: 400;
     font-size: 14px;
+    margin-bottom: 0;
     line-height: 20px;
 }
 
@@ -169,11 +179,11 @@
 
 @media (min-width: 768px) {
     .due-items .day-count {
-        width: 20%;
+        width: 14%;
     }
 
     .due-items .due-info {
-        width: 80%;
+        width: 86%;
         padding-left: 0px;
     }
 }
