--- a/src/app/initiate-claim/initiate-claim.component.scss
+++ b/src/app/initiate-claim/initiate-claim.component.scss
@@ -1,7 +1,10 @@
 .srch-ti input {
     text-indent: 0;
 }
-
+.main .form-control
+{
+    text-indent: 0;
+}
 @media screen and (min-width:992px) {
     .top-25 {
         top: 25px;
