--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,7 +106,7 @@ h4 {
     font-size: 14px;
     line-height: 22px;
     color: var(--primary);
-    text-indent: 0;
+    text-indent: 30px;
 }
 
 /* .search input:focus {
